correct z-index for mini peen

--- a/src/game/components/toys/MiniPeen/style.css
+++ b/src/game/components/toys/MiniPeen/style.css
@@ -3,4 +3,5 @@
   position: absolute;
   top: 53.2%;
   left: 36.8%;
+  z-index: 4;
 }
